--- a/Vienna/SharedSupport/Styles/Perlucida.viennastyle/stylesheet.css
+++ b/Vienna/SharedSupport/Styles/Perlucida.viennastyle/stylesheet.css
@@ -100,6 +100,11 @@ body {
 	  max-width: 100%;
 	}
 
+	/* specific direction for code */
+	code, pre {
+	  direction: ltr;
+	}
+
 	/* keep images ratio and avoid box overflow due to border or padding */
 	img {
 	  box-sizing: border-box;
