--- a/Vienna/SharedSupport/Styles/Tyger.viennastyle/stylesheet.css
+++ b/Vienna/SharedSupport/Styles/Tyger.viennastyle/stylesheet.css
@@ -80,6 +80,11 @@ img, table, td, blockquote, code, pre, textarea, input, iframe, object, embed, v
 	max-width: 100%;
 }
 
+/* specific direction for code */
+code, pre {
+  direction: ltr;
+}
+
 /* keep images ratio and avoid box overflow due to border or padding */
 img {
 	box-sizing: border-box;
