--- a/Vienna/SharedSupport/Styles/Serifim Dark.viennastyle/stylesheet.css
+++ b/Vienna/SharedSupport/Styles/Serifim Dark.viennastyle/stylesheet.css
@@ -138,3 +138,25 @@ ul {
 .articleBody img {
   border: 4px solid #eee;
 }
+
+/* fix a 100% max size to potentially problematic elements */
+img, table,
+td, blockquote,
+code, pre,
+textarea, input,
+iframe, object,
+embed, video {
+  max-width: 100%;
+}
+
+/* specific direction for code */
+code, pre {
+  direction: ltr;
+}
+
+/* keep images ratio and avoid box overflow due to border or padding */
+img {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  height: auto !important;
+}
